# deprecated_org.webosports.app.terminal

./: CMakeLists.txt  COPYING  README.md  appinfo.json
src/: main.cpp  main.qml
